[gd_scene load_steps=12 format=1]

[ext_resource path="res://gfx/ui/theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/title.gd" type="Script" id=2]
[ext_resource path="res://gfx/title_bg.png" type="Texture" id=3]
[ext_resource path="res://gfx/title.png" type="Texture" id=4]
[ext_resource path="res://config_panel.tscn" type="PackedScene" id=5]
[ext_resource path="res://gfx/ui/jump.png" type="Texture" id=6]
[ext_resource path="res://gfx/ui/turn.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Title:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ Vector2( 0.68, 0.65 ), Vector2( 0.65, 0.7 ) ] }

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 1, 1, 1, 0.502706 )
light_color = Color( 0, 0, 0, 1 )
dark_color = Color( 0, 0, 0, 1 )
border_size = 5
border_blend = false
draw_bg = true

[sub_resource type="StyleBoxFlat" id=3]

content_margin/left = 2.0
content_margin/right = 2.0
content_margin/top = 2.0
content_margin/bottom = 2.0
bg_color = Color( 1, 0, 0, 1 )
light_color = Color( 0, 0, 0, 0 )
dark_color = Color( 0, 0, 0, 0 )
border_size = 7
border_blend = false
draw_bg = true

[sub_resource type="Theme" id=4]

ProgressBar/colors/font_color = Color( 0.941176, 0.941176, 0.941176, 1 )
ProgressBar/colors/font_color_shadow = Color( 0, 0, 0, 1 )
ProgressBar/fonts/font = null
ProgressBar/styles/bg = SubResource( 2 )
ProgressBar/styles/fg = SubResource( 3 )

[node name="Title" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 2 )

[node name="Center" type="Control" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="Background" type="Sprite" parent="Center"]

transform/pos = Vector2( 0, 10 )
texture = ExtResource( 3 )

[node name="Title" type="Sprite" parent="Center"]

transform/pos = Vector2( 0, -210 )
transform/scale = Vector2( 0.68, 0.65 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Center"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/idle = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "idle"

[node name="Play" type="Button" parent="."]

rect/scale = Vector2( 0.6, 0.6 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 800.0
margin/top = 239.0
margin/right = 1105.0
margin/bottom = 365.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play"
flat = false

[node name="Help" type="Button" parent="."]

rect/scale = Vector2( 0.6, 0.6 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 800.0
margin/top = 322.0
margin/right = 1105.0
margin/bottom = 448.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Help"
flat = false

[node name="Setup" type="Button" parent="."]

rect/scale = Vector2( 0.6, 0.6 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 802.0
margin/top = 404.0
margin/right = 1107.0
margin/bottom = 530.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Setup"
flat = false

[node name="Quit" type="Button" parent="."]

rect/scale = Vector2( 0.6, 0.6 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 801.0
margin/top = 490.0
margin/right = 1106.0
margin/bottom = 616.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit"
flat = false

[node name="ConfigPanel" parent="." instance=ExtResource( 5 )]

EnableReset = true

[node name="Doc" type="Panel" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 54.0
margin/top = 27.0
margin/right = 721.0
margin/bottom = 560.0

[node name="Pages" type="Control" parent="Doc"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Page1" type="Control" parent="Doc/Pages"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 38.0
margin/top = 35.0
margin/right = 629.0
margin/bottom = 494.0

[node name="RichTextLabel" type="RichTextLabel" parent="Doc/Pages/Page1"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -12.0
margin/right = 1207.0
margin/bottom = 935.0
bbcode/enabled = true
bbcode/bbcode = "Thanks for purchasing [i]MORECO[/i] (MOuse REmote COntrol), the state of the art neural stimulation device targeted at rodents.\nThanks to [i]MORECO (TM)[/i], you will be able to control nearby mice, to amaze your friends or entertain your cat."
visible_characters = -1

[node name="RichTextLabel1" type="RichTextLabel" parent="Doc/Pages/Page1"]

rect/scale = Vector2( 0.25, 0.25 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 2.0
margin/top = 354.0
margin/right = 2211.0
margin/bottom = 683.0
bbcode/enabled = true
bbcode/bbcode = "[i]MORECO[/i] is a registered trademark of Brilliant Thoughts Corporation.\nNot suitable for children under 12.\n"
visible_characters = -1

[node name="Page2" type="Control" parent="Doc/Pages"]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 38.0
margin/top = 35.0
margin/right = 629.0
margin/bottom = 494.0

[node name="RichTextLabel" type="RichTextLabel" parent="Doc/Pages/Page2"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -12.0
margin/right = 823.0
margin/bottom = 935.0
bbcode/enabled = true
bbcode/bbcode = "The Jump button (right arrow when using the MORECO software on PC or MAC) will stimulate the rodent\'s \"jump\" neuron."
visible_characters = -1

[node name="RichTextLabel1" type="RichTextLabel" parent="Doc/Pages/Page2"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 234.0
margin/right = 1207.0
margin/bottom = 688.0
bbcode/enabled = true
bbcode/bbcode = "Holding this button will induce stronger stimulation, causing the mouse to jump higher."
visible_characters = -1

[node name="texture" type="TextureFrame" parent="Doc/Pages/Page2"]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 404.0
margin/top = 4.0
margin/right = 532.0
margin/bottom = 132.0
texture = ExtResource( 6 )
stretch_mode = 0

[node name="Page3" type="Control" parent="Doc/Pages"]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 38.0
margin/top = 35.0
margin/right = 629.0
margin/bottom = 494.0

[node name="RichTextLabel" type="RichTextLabel" parent="Doc/Pages/Page3"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -12.0
margin/right = 823.0
margin/bottom = 935.0
bbcode/enabled = true
bbcode/bbcode = "The Turn button (left arrow when using the MORECO software on PC or MAC) will stimulate the rodent\'s \"change direction\" neuron."
visible_characters = -1

[node name="texture" type="TextureFrame" parent="Doc/Pages/Page3"]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 404.0
margin/top = 4.0
margin/right = 532.0
margin/bottom = 132.0
texture = ExtResource( 7 )
stretch_mode = 0

[node name="Page4" type="Control" parent="Doc/Pages"]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 38.0
margin/top = 35.0
margin/right = 629.0
margin/bottom = 494.0

[node name="RichTextLabel" type="RichTextLabel" parent="Doc/Pages/Page4"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 42.0
margin/right = 1177.0
margin/bottom = 837.0
bbcode/enabled = true
bbcode/bbcode = "Please make sure to feed your mouse. MORECO (TM) has a gauge that estimates your mouse\'s energy (patent pending).\nBe aware satiated mice run faster, whereas starving mice tend to fall asleep."
visible_characters = -1

[node name="ProgressBar" type="ProgressBar" parent="Doc/Pages/Page4"]

visibility/opacity = 0.75
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = SubResource( 4 )
margin/left = 1.0
margin/top = -5.0
margin/right = 295.0
margin/bottom = 27.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 50.0
range/exp_edit = false
range/rounded = false
percent/visible = false

[node name="Page5" type="Control" parent="Doc/Pages"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 38.0
margin/top = 35.0
margin/right = 629.0
margin/bottom = 494.0

[node name="RichTextLabel1" type="RichTextLabel" parent="Doc/Pages/Page5"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -18.0
margin/top = -8.0
margin/right = 624.0
margin/bottom = 247.0
bbcode/enabled = true
bbcode/bbcode = "Have fun with your [i]MORECO (TM)[/i] !"
visible_characters = -1

[node name="RichTextLabel" type="RichTextLabel" parent="Doc/Pages/Page5"]

rect/scale = Vector2( 0.3, 0.3 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -6.0
margin/top = 193.0
margin/right = 2023.0
margin/bottom = 741.0
bbcode/enabled = true
bbcode/bbcode = "Brilliant Thoughts Corporation specifically DISCLAIMS LIABILITY FOR INCIDENTAL OR CONSEQUENTIAL DAMAGES and assumes no responsibility or liability for any loss or damage suffered by any person as a result of the use or misuse of MORECO. "
visible_characters = -1

[node name="Prev" type="Button" parent="Doc"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 17.0
margin/top = 456.0
margin/right = 103.0
margin/bottom = 582.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "<"
flat = false

[node name="Next" type="Button" parent="Doc"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 608.0
margin/top = 454.0
margin/right = 694.0
margin/bottom = 580.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = ">"
flat = false

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]

[connection signal="pressed" from="Help" to="." method="_on_Help_pressed"]

[connection signal="pressed" from="Setup" to="." method="button_sound"]

[connection signal="pressed" from="Setup" to="ConfigPanel" method="show"]

[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]

[connection signal="pressed" from="Doc/Prev" to="." method="_on_Prev_pressed"]

[connection signal="pressed" from="Doc/Next" to="." method="_on_Next_pressed"]


